--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="styles.css">
-  <h1>The Calculator</h1>
+  <title>The Calculator.</title>
+  <h1>The Calculator.</h1>
 </head>
 
 <body>
   <div class="calculator">
     <div class="display">
+      <div class="answer">answer</div>
+      <div class="inputarea">input</div>
     </div>
     <div class="buttons">
       <button class="digit" id='seven'>7</button>
@@ -25,7 +28,7 @@
       <button class="digit" id='four'>4</button>
       <button class="operator" id='minus'>-</button>
       <button class="digit" id='zero'>0</button>
-      <button class="operator" id='multiply'>X</button>
+      <button class="operator" id='multiply'>x</button>
       <button class="operator" id='divide'>/</button>
       <button id="enter">=</button>
     </div>
