--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 
 <body>
   <div class="calculator">
-    <div class="display">
+    <div id="display">
       <div class="answer">answer</div>
-      <div class="inputarea">input</div>
+      <div id="inputarea">input</div>
     </div>
     <div class="buttons">
-      <button class="digit" id='seven'>7</button>
-      <button class="digit" id='eight'>8</button>
-      <button class="digit" id='nine'>9</button>
+      <button class='digit' id='seven'>7</button>
+      <button class="digit" id='eight' data-number>8</button>
+      <button class="digit" id='nine' data-number>9</button>
       <button id='clear'>Clear</button>
-      <button class="digit" id='four'>4</button>
-      <button class="digit" id='five'>5</button>
-      <button class="digit" id='six'>6</button>
+      <button class="digit" id='four' data-number>4</button>
+      <button class="digit" id='five' data-number>5</button>
+      <button class="digit" id='six' data-number>6</button>
       <button class="operator" id='plus'>+</button>
-      <button class="digit" id='one'>1</button>
-      <button class="digit" id='three'>3</button>
-      <button class="digit" id='four'>4</button>
+      <button class="digit" id='one' data-number>1</button>
+      <button class="digit" id='three' data-number>3</button>
+      <button class="digit" id='four' data-number>4</button>
       <button class="operator" id='minus'>-</button>
-      <button class="digit" id='zero'>0</button>
+      <button class="digit" id='zero' data-number>0</button>
       <button class="operator" id='multiply'>x</button>
       <button class="operator" id='divide'>/</button>
       <button id="enter">=</button>
