--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="calculator">
     <div id="display">
-      <div class="answer">answer</div>
+      <div class="answer"></div>
       <div id="inputarea">input</div>
     </div>
     <div class="buttons">
