--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
+  <div class='subhead'>It's not just any calculator. It's <i>The</i> Calculator.</div>
   <div class="calculator">
     <div id="display">
-      <div class="answer"></div>
+      <div class="answer">...</div>
       <div id="inputarea">input</div>
     </div>
     <div class="buttons">
@@ -24,8 +25,8 @@
       <button class="digit" id='six'>6</button>
       <button class="operator" id='plus'>+</button>
       <button class="digit" id='one'>1</button>
+      <button class="digit" id='two'>2</button>
       <button class="digit" id='three'>3</button>
-      <button class="digit" id='four'>4</button>
       <button class="operator" id='minus'>-</button>
       <button class="digit" id='zero'>0</button>
       <button class="operator" id='multiply'>x</button>
