--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="calculator">
     <div id="display">
       <div class="answer">...</div>
-      <div id="inputarea">input</div>
+      <div id="inputarea">0</div>
     </div>
     <div class="buttons">
       <button class='digit' id='seven'>7</button>
