--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
       <div id="inputarea">0</div>
     </div>
     <div class="buttons">
-      <button class='digit' id='seven'>7</button>
-      <button class="digit" id='eight'>8</button>
-      <button class="digit" id='nine'>9</button>
+      <button class='digit' data-number="">7</button>
+      <button class="digit" data-number>8</button>
+      <button class="digit" data-number>9</button>
       <button id='clear'>Clear</button>
-      <button class="digit" id='four'>4</button>
-      <button class="digit" id='five'>5</button>
-      <button class="digit" id='six'>6</button>
-      <button class="operator" id='plus'>+</button>
-      <button class="digit" id='one'>1</button>
-      <button class="digit" id='two'>2</button>
-      <button class="digit" id='three'>3</button>
-      <button class="operator" id='minus'>-</button>
-      <button class="digit" id='zero'>0</button>
-      <button class="operator" id='multiply'>x</button>
-      <button class="operator" id='divide'>/</button>
-      <button id="enter">=</button>
+      <button class="digit" data-number>4</button>
+      <button class="digit" data-number>5</button>
+      <button class="digit" data-number>6</button>
+      <button class="operator" data-operator>+</button>
+      <button class="digit" data-number>1</button>
+      <button class="digit" data-number>2</button>
+      <button class="digit" data-number>3</button>
+      <button class="operator" data-operator>-</button>
+      <button class="digit" data-number>0</button>
+      <button class="operator" data-operator>x</button>
+      <button class="operator" data-operator>/</button>
+      <button id="equal">=</button>
     </div>
   </div>
 </body>
