--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
       <div id="inputarea">0</div>
     </div>
     <div class="buttons">
-      <button class='digit' data-number="">7</button>
+      <button class='digit' data-number>7</button>
       <button class="digit" data-number>8</button>
       <button class="digit" data-number>9</button>
       <button id='clear'>Clear</button>
       <button class="digit" data-number>4</button>
       <button class="digit" data-number>5</button>
       <button class="digit" data-number>6</button>
-      <button class="operator" data-operator>+</button>
+      <button class="operator" id="add" data-operator>+</button>
       <button class="digit" data-number>1</button>
       <button class="digit" data-number>2</button>
       <button class="digit" data-number>3</button>
-      <button class="operator" data-operator>-</button>
+      <button class="operator" id="subtract" data-operator>-</button>
       <button class="digit" data-number>0</button>
-      <button class="operator" data-operator>x</button>
-      <button class="operator" data-operator>/</button>
+      <button class="operator" id="multiply" data-operator>x</button>
+      <button class="operator"id="divide" data-operator>/</button>
       <button id="equal">=</button>
     </div>
   </div>
