--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class='subhead'>It's not just any calculator. It's <i>The</i> Calculator.</div>
   <div class="calculator">
     <div id="display">
-      <div class="answer">...</div>
+      <div id="answer"></div>
       <div id="inputarea">0</div>
     </div>
     <div class="buttons">
